--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,11 @@
 .container {
   padding: 0 2rem;
+  width: 720px;
+  height: auto;
+  min-height: 620px;
+  background: #f5f5f5;
+  border-radius: 20px;
+  margin: 42px auto auto auto;
 }
 
 .main {
@@ -10,22 +16,30 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #e5e5e5;
 }
 
-.footer {
+.todo_item {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  outline: none;
+  background: #ffffff;
+  border: 0;
+  border-radius: 9999px;
+  font-size: 16px;
+  width: 518px;
+  height: 46px;
+  margin: 17px auto auto auto;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.todo_item_completed .title {
+  color: #a9a9a9;
+  text-decoration: line-through #a9a9a9;
+}
+
+.todolist {
+  margin: auto auto auto 16px;
+  border: 0;
+  border-color: #ffffff;
 }
 
 .title a {
@@ -42,7 +56,6 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
 }
 
 .title,
@@ -50,62 +63,22 @@
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
+.input {
+  outline: none;
+  border: 0;
+  width: 100%;
   color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  background: transparent;
+  font-size: 16px;
+  width: 400px;
+  margin: auto auto auto 20px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.checktodo {
+  background: #585292;
+  border: 2px solid #585292;
+  border-radius: 6px;
+  margin: 12px o 12px 20px;
 }
 
 @media (max-width: 600px) {
@@ -126,4 +99,190 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+/* progressbar */
+.progressbox {
+  position: relative;
+  width: 518px;
+  height: 123px;
+  background: #e07c7c;
+  border-radius: 20px;
+  margin: auto;
+}
+
+.progressbar {
+  width: 480px;
+  height: 7.34px;
+  margin: auto;
+  background: #3b3b3b;
+  border-radius: 999px;
+  accent-color: #ffffff;
+}
+
+.progresstext {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ebb9b8;
+}
+
+.progresstitle {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 33px;
+  color: #ffffff;
+}
+
+.progressgroup {
+  margin: 19px auto auto 19px;
+}
+
+/* dropdrow */
+.drop {
+  margin: auto;
+  float: right;
+  border: none;
+  color: #9796a8;
+  list-style-type: none;
+  font-size: 2em;
+  margin: auto 19.6px auto auto;
+}
+
+.drop:hover {
+  cursor: pointer;
+}
+
+.drop:hover > .dropdown {
+  z-index: 1;
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+}
+
+.dropdown {
+  z-index: -1;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  color: black;
+  background: #e1e6ea;
+  margin-left: -90px;
+  transition: all 0.3s ease;
+  transform: translateY(90px);
+  cursor: default;
+  width: 111px;
+  height: 81px;
+  background: #ffffff;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.drop_link {
+  display: block;
+  text-align: left;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: capitalize;
+  padding: 10px 15px;
+  transition: all 0.3s ease;
+}
+
+.drop_link:hover {
+  font-size: 18px;
+}
+
+.hide {
+  display: none !important;
+}
+
+.btedit {
+  color: #2e2e2e;
+}
+
+.btdelete {
+  color: #e07c7c;
+}
+
+.btsave {
+  width: 64px;
+  height: 36px;
+  background: #585292;
+  border-radius: 999px;
+  color: #ffffff;
+  font-size: 14px;
+  margin: auto 6px auto auto;
+  border: 0;
+}
+
+/* filter */
+a.active {
+  color: #fff;
+}
+.filter {
+  padding: 15px;
+  margin: 15px auto;
+  width: 100px;
+  border: none;
+  background: #9b59b6;
+  color: #fff;
+  border-radius: 7px;
+  font-size: 14px;
+  transition: all 0.3s ease;
+  list-style-type: none;
+}
+
+.filter:hover {
+  background: #a06fb4;
+  cursor: pointer;
+}
+
+.icon {
+  border: solid white;
+  margin-left: 5px;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  text-align: end;
+}
+
+.selectfilter {
+  z-index: -1;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  color: black;
+  background: #e1e6ea;
+  width: 200px;
+  margin-top: 20px;
+  margin-left: -15px;
+  transition: all 0.3s ease;
+  border-radius: 0px 0px 7px 7px;
+  transform: translateY(15px);
+  cursor: default;
+}
+
+.item {
+  display: block;
+  text-align: left;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: capitalize;
+  padding: 10px 15px;
+  transition: all 0.3s ease;
+}
+
+.item:hover {
+  font-size: 18px;
+  background: #d4dade;
+}
+
+.item:last-of-type {
+  border-radius: 0px 0px 7px 7px;
 }
